# linear-massiv

./: .gitignore  README.md  cabal.project  cabal.project.freeze  linear-massiv.cabal
bench/: Main.hs
bench-comparison/: Main.hs
bench-results/: comparison-v2.csv  comparison.csv  eigen.csv  parallel-fresh.csv  parallel.csv  results.csv  svd.csv
bench/Bench/: BLAS.hs  Eigen.hs  Orthogonal.hs  Parallel.hs  Solve.hs
benchmarks/: REPORT.md
report/: benchmark-report.tex
src/Numeric/LinearAlgebra/: Massiv.hs
src/Numeric/LinearAlgebra/Massiv/: Internal.hs  Linear.hs  Norms.hs  Types.hs
src/Numeric/LinearAlgebra/Massiv/BLAS/: Level1.hs  Level2.hs  Level3.hs
src/Numeric/LinearAlgebra/Massiv/Eigen/: Hessenberg.hs  Power.hs  SVD.hs  Schur.hs  Symmetric.hs
src/Numeric/LinearAlgebra/Massiv/Internal/: Kernel.hs
src/Numeric/LinearAlgebra/Massiv/Orthogonal/: Givens.hs  Householder.hs  LeastSquares.hs  QR.hs
src/Numeric/LinearAlgebra/Massiv/Solve/: Banded.hs  Cholesky.hs  LU.hs  Triangular.hs
test/: Spec.hs  VERIFICATION.md
test/Test/: BLAS.hs  Eigen.hs  Norms.hs  Orthogonal.hs  Residuals.hs  Solve.hs  Types.hs
